Improve ucs-service security
move ucs authtntication info to headers instead of query
enable https access to ucs-service
